# ms-ezwallet-jax

./: .env.example  .gitignore  Procfile  acoes.csv  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
ms_ezwallet_jax/: __main__.py
ms_ezwallet_jax/src/data/protocols/: add_actions_repository.py
ms_ezwallet_jax/src/data/usecases/: db_add_actions_adapter.py
ms_ezwallet_jax/src/domain/usecases/: actions_model.py  add_actions.py  data_manipulation.py  html_parser.py  http_client.py
ms_ezwallet_jax/src/infra/data_manipulation/: pandas.py  pandas_helper.py
ms_ezwallet_jax/src/infra/html_parser/: beautifulsoup.py
ms_ezwallet_jax/src/infra/http_client/: requests.py
ms_ezwallet_jax/src/infra/scraper/: selenium.py
ms_ezwallet_jax/src/main/: app.py  main.py
ms_ezwallet_jax/src/main/config/: configuration.py
ms_ezwallet_jax/src/main/factories/: get_action_data_by_code.py  get_actions.py
ms_ezwallet_jax/src/main/routes/: actions.py  get_actions.py  healthcheck.py
ms_ezwallet_jax/src/presentation/helpers/: http.py
ms_ezwallet_jax/src/presentation/protocols/: controller.py  http.py
src/: main.py
src/domain/usecases/: scraper.py
src/infra/scraper/: selenium.py
src/main/: app.py
src/presentation/controllers/actions/: get_actions.py
tests/data/usecases/: test_db_add_actions_adapter.py
tests/factories/: action.py  html_string.py  parsed_html_string.py
tests/infra/data_manipulation/: test_pandas.py
tests/infra/html_parser/: test_bs4.py
tests/infra/http_client/: test_requests.py
tests/infra/scraper/: test_selenium.py
(+7 files in other folders)
