[tool.poetry]
name = "ms_ezwallet_jax"
version = "0.1.0"
description = ""
authors = ["Gabriel Fonseca <gabriel.fonsecadev@gmail.com>"]
packages = [
  {include = 'ms_ezwallet_jax'},
]

[tool.poetry.scripts]
start = "ms_ezwallet_jax.src.main.main:start"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
selenium = "^4.0.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
pymongo = "^3.12.1"
requests = "^2.26.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
pytest-watcher = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
